unpackaged/main/default/objects/EventApi__Attendee__c/EventApi__Attendee__c.object-meta.xml
<CustomObject>
    <description>Attendees track individuals registered for conference style or other &quot;registration&quot; style Events.</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>