unpackaged/main/default/objects/EventApi__Attendee__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <formula>CASESAFEID(EventApi__Contact__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactID</label>
    <type>Text</type>
</CustomField>