unpackaged/main/default/objects/EventApi__Attendee__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>EventApi__Attendee_Event__r.EventApi__Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>