unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the Account that the Attendee Contact is associated with.</description>
    <inlineHelpText>** System Calculated Override ** Link to the Account that the Attendee Contact is associated with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>