unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Assignment__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related assignment that the attendee was created from</description>
    <inlineHelpText>Link to the related assignment that the attendee was created from</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>OrderApi__Assignment__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>