unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Attendee_Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to Event.</description>
    <inlineHelpText>** Required ** Link to Event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>