unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to the related Contact. Required only if &quot;Require Contact Link for Attendees&quot; is checked on the parent Event.</description>
    <inlineHelpText>** Conditionally Required ** Link to the related Contact. Required only if &quot;Require Contact Link for Attendees&quot; is checked on the parent Event.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>