unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Contact_Created_by_System__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Created_by_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be automatically checked when the contact is created while registering for an event.</description>
    <inlineHelpText>This field will be automatically checked when the contact is created while registering for an event.</inlineHelpText>
    <label>Contact Created by System</label>
    <type>Checkbox</type>
</CustomField>