unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Email__c</fullName>
    <description>Enter the email to use for communications sent to the Attendee related to the Event.</description>
    <inlineHelpText>Enter the email to use for communications sent to the Attendee related to the Event.</inlineHelpText>
    <label>DEPRECATED</label>
    <length>100</length>
    <type>Text</type>
</CustomField>