unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__First_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__First_Name__c</fullName>
    <description>Defines the first name of the attendee</description>
    <inlineHelpText>Defines the first name of the attendee</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>