unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Full_Name__c</fullName>
    <description>** System Calculated Override ** The full name of the attendee as it should display on Event badges. Derives automatically from the First and Last Name fields on the linked Contact record.</description>
    <inlineHelpText>** System Calculated Override ** The full name of the attendee as it should display on Event badges. Derives automatically from the First and Last Name fields on the linked Contact record.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>