unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Invitation_Source__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Invitation_Source__c</fullName>
    <description>This field defines the source, campaign or report, of invited attendees to the event. ex &quot;Campaign - Event Prospect List&quot;.</description>
    <inlineHelpText>This field defines the source, campaign or report, of invited attendees to the event. ex &quot;Campaign - Event Prospect List&quot;.</inlineHelpText>
    <label>Invitation Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>