unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Invitation_Status__c</fullName>
    <description>The state of the related attendee&#39;s invitation.</description>
    <inlineHelpText>The state of the related attendee&#39;s invitation.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>