unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Is_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Checked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Attendee is considered to be/was in attendance for the Event. Default unchecked.</description>
    <inlineHelpText>When checked, the Attendee is considered to be/was in attendance for the Event. Default unchecked.</inlineHelpText>
    <label>Checked In</label>
    <type>Checkbox</type>
</CustomField>