unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Is_Invitation_Accepted__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Invitation_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the attendee has registered for the related Invitation Only event.</description>
    <inlineHelpText>When checked, the attendee has registered for the related Invitation Only event.</inlineHelpText>
    <label>Is Invitation Accepted</label>
    <type>Checkbox</type>
</CustomField>