unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Is_Invitation_Declined__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Invitation_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the attendee has declined the invitation to the related Invitation Only event.</description>
    <inlineHelpText>When checked, the attendee has declined the invitation to the related Invitation Only event.</inlineHelpText>
    <label>Is Invitation Declined</label>
    <type>Checkbox</type>
</CustomField>