unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Is_Invitation_Sent__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Invitation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the attendee was sent an invitation to the related Invitation Only event.</description>
    <inlineHelpText>When checked, the attendee was sent an invitation to the related Invitation Only event.</inlineHelpText>
    <label>Is Invitation Sent</label>
    <type>Checkbox</type>
</CustomField>