unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Is_Registered__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Attendee status will be updated to &#39;Registered&#39;. Default unchecked.</description>
    <inlineHelpText>When checked, the Attendee status will be updated to &#39;Registered&#39;. Default unchecked.</inlineHelpText>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>