unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Last_Invitation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Last_Invitation_Email_Sent__c</fullName>
    <description>The most recent date an event invitation was sent to the related attendee. This date is displayed within the related attendee row in the Event Builder&#39;s Invitation Only tab.</description>
    <inlineHelpText>The most recent date an event invitation was sent to the related attendee. This date is displayed within the related attendee row in the Event Builder&#39;s Invitation Only tab.</inlineHelpText>
    <label>Last Invitation Email Sent</label>
    <type>DateTime</type>
</CustomField>