unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Max_Guests_Allowed__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Max_Guests_Allowed__c</fullName>
    <description>The maximum number of guests the related attendee is allowed to additionally register.</description>
    <inlineHelpText>The maximum number of guests the related attendee is allowed to additionally register.</inlineHelpText>
    <label>Max Guests Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>