unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Preferred_Email__c</fullName>
    <description>Email for the attendee</description>
    <inlineHelpText>Email for the attendee</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>