unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Refund_Requested__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Refund_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates that the related attendee has requested for a ticket refund.</description>
    <inlineHelpText>When checked, indicates that the related attendee has requested for a ticket refund.</inlineHelpText>
    <label>Refund Requested</label>
    <type>Checkbox</type>
</CustomField>