unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Date__c</fullName>
    <description>** System Calculated Override ** The date the Attendee registered for the Event. Defaults to the value of the &quot;Transaction Date&quot; if not defined on entry.</description>
    <inlineHelpText>** System Calculated Override ** The date the Attendee registered for the Event. Defaults to the value of the &quot;Transaction Date&quot; if not defined on entry.</inlineHelpText>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>