unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Registration Group.</description>
    <inlineHelpText>Link to related Registration Group.</inlineHelpText>
    <label>Registration Group</label>
    <referenceTo>EventApi__Registration_Group__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>