unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Registration_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Site_Url__c</fullName>
    <description>URL endpoint to be used for email registrants.</description>
    <inlineHelpText>URL endpoint to be used for email registrants.</inlineHelpText>
    <label>Register Site Url</label>
    <type>Url</type>
</CustomField>