unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Registration_Total__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Total__c</fullName>
    <description>** System Calculated ** Total registration sales derived from the total of all child registration items.</description>
    <inlineHelpText>** System Calculated ** Total registration sales derived from the total of all child registration items.</inlineHelpText>
    <label>Registration Total</label>
    <summarizedField>EventApi__Registration_Item__c.EventApi__Total__c</summarizedField>
    <summaryForeignKey>EventApi__Registration_Item__c.EventApi__Attendee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>