unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the Sales Order that created the registration.</description>
    <inlineHelpText>** System Calculated Override ** Link to the Sales Order that created the registration.</inlineHelpText>
    <label>Sales Order (Source)</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>