unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to the Sales Order Line item that created the Registration.</description>
    <inlineHelpText>** System Calculated Override ** Link to the Sales Order Line item that created the Registration.</inlineHelpText>
    <label>Sales Order Line (Source)</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>