unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Send_Invitation_Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Send_Invitation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, triggers an email to be sent the related attendee from an Invitation Only Event Email Workflow.</description>
    <inlineHelpText>When checked, triggers an email to be sent the related attendee from an Invitation Only Event Email Workflow.</inlineHelpText>
    <label>Send Invitation Email</label>
    <type>Checkbox</type>
</CustomField>