unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send email notifications for event registration.</description>
    <inlineHelpText>Send email notifications for event registation.</inlineHelpText>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>