unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Status__c</fullName>
    <description>** Required ** The current status of the Attendee Registration. Defaults to &quot;Registered&quot;.</description>
    <inlineHelpText>** Required ** The current status of the Attendee Registration. Defaults to &quot;Registered&quot;.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Substituted</fullName>
            </value>
            <value>
                <fullName>Transferred Out</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>