unpackaged/main/default/objects/EventApi__Attendee__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to Ticket Type.</description>
    <inlineHelpText>** Required ** Link to Ticket Type.</inlineHelpText>
    <label>Ticket Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.EventApi__Attendee_Event__c</field>
            <operation>equals</operation>
            <valueField>EventApi__Ticket_Type__c.EventApi__Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>