unpackaged/main/default/objects/EventApi__Attendee__c/fields/Exam_Year__c.field-meta.xml
<CustomField>
    <fullName>Exam_Year__c</fullName>
    <formula>YEAR(EventApi__Attendee_Event__r.EventApi__Start_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>