unpackaged/main/default/objects/EventApi__Attendee__c/fields/FON_Event_Timezone__c.field-meta.xml
<CustomField>
    <fullName>FON_Event_Timezone__c</fullName>
    <formula>TEXT(EventApi__Attendee_Event__r.EventApi__Time_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Timezone</label>
    <type>Text</type>
</CustomField>