unpackaged/main/default/objects/EventApi__Attendee__c/fields/FON_Exam_Results__c.field-meta.xml
<CustomField>
    <fullName>FON_Exam_Results__c</fullName>
    <inlineHelpText>Information will be uploaded in a file once TCH has received the Exam Results. This does not need to be manually updated</inlineHelpText>
    <label>Exam Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>