unpackaged/main/default/objects/EventApi__Attendee__c/fields/FON_Has_Session__c.field-meta.xml
<CustomField>
    <fullName>FON_Has_Session__c</fullName>
    <label>Has Session</label>
    <summaryFilterItems>
        <field>EventApi__Registration_Item__c.Name</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>EventApi__Registration_Item__c.EventApi__Attendee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>