unpackaged/main/default/objects/EventApi__Attendee__c/fields/FON_Session_Sent__c.field-meta.xml
<CustomField>
    <fullName>FON_Session_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Sent</label>
    <type>Checkbox</type>
</CustomField>