unpackaged/main/default/objects/EventApi__Attendee__c/fields/Group_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Group_Attendees__c</fullName>
    <label>Group Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>