unpackaged/main/default/objects/EventApi__Attendee__c/fields/Is_Examinee__c.field-meta.xml
<CustomField>
    <fullName>Is_Examinee__c</fullName>
    <formula>EventApi__Attendee_Event__r.Is_NCP_Exam__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Examinee</label>
    <type>Checkbox</type>
</CustomField>