unpackaged/main/default/objects/EventApi__Attendee__c/fields/Is_Group_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Registration__c</fullName>
    <formula>IF(EventApi__Registration_Group__c != null,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Group Registration</label>
    <type>Checkbox</type>
</CustomField>