unpackaged/main/default/objects/EventApi__Attendee__c/fields/Is_Main_Registrant__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Registrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main Registrant</label>
    <type>Checkbox</type>
</CustomField>