unpackaged/main/default/objects/EventApi__Attendee__c/fields/Legacy_Attendee_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Attendee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Attendee ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>