unpackaged/main/default/objects/EventApi__Attendee__c/fields/Main_Registrant_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Registrant_Name__c</fullName>
    <formula>SUBSTITUTE(EventApi__Registration_Group__r.Name,&quot;&#39;s Group&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Registrant Name</label>
    <type>Text</type>
</CustomField>