unpackaged/main/default/objects/EventApi__Attendee__c/fields/NCP_Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>NCP_Candidate_ID__c</fullName>
    <formula>IF(EventApi__Attendee_Event__r.Is_NCP_Exam__c==true,EventApi__Contact__r.FON_NCP_Candidate_ID__c,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCP Candidate ID</label>
    <type>Text</type>
</CustomField>