unpackaged/main/default/objects/EventApi__Attendee__c/fields/Outlook_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Event_Start_Date__c</fullName>
    <formula>TEXT(YEAR( EventApi__Attendee_Event__r.EventApi__Start_Date__c )) +&#39;-&#39;+
IF(MONTH( EventApi__Attendee_Event__r.EventApi__Start_Date__c ) &lt; 10, &#39;0&#39; + TEXT(MONTH( EventApi__Attendee_Event__r.EventApi__Start_Date__c )), TEXT(MONTH( EventApi__Attendee_Event__r.EventApi__Start_Date__c ))) +&#39;-&#39;+

IF(DAY( EventApi__Attendee_Event__r.EventApi__Start_Date__c ) &lt; 10,
&#39;0&#39; + TEXT(DAY( EventApi__Attendee_Event__r.EventApi__Start_Date__c )),
TEXT(DAY( EventApi__Attendee_Event__r.EventApi__Start_Date__c ))) + &#39;T&#39; +

IF(CONTAINS(EventApi__Attendee_Event__r.EventApi__Start_Time__c,&#39;PM&#39;),
TEXT( VALUE(LEFT(EventApi__Attendee_Event__r.EventApi__Start_Time__c, FIND(&quot;:&quot;, EventApi__Attendee_Event__r.EventApi__Start_Time__c)-1)) + 12 ) &amp; &#39;:&#39; &amp;
TRIM(SUBSTITUTE(SUBSTITUTE(RIGHT(EventApi__Attendee_Event__r.EventApi__Start_Time__c,(LEN(EventApi__Attendee_Event__r.EventApi__Start_Time__c)-FIND(&quot;:&quot;, EventApi__Attendee_Event__r.EventApi__Start_Time__c))),&#39; AM&#39;,&#39;&#39;),&#39; PM&#39;,&#39;&#39;)) &amp; &#39;:00&#39;
,
IF(VALUE(LEFT(EventApi__Attendee_Event__r.EventApi__Start_Time__c, FIND(&quot;:&quot;, EventApi__Attendee_Event__r.EventApi__Start_Time__c)-1)) &lt; 10,&#39;0&#39;,&#39;&#39;)&amp;
TEXT( VALUE(LEFT(EventApi__Attendee_Event__r.EventApi__Start_Time__c, FIND(&quot;:&quot;, EventApi__Attendee_Event__r.EventApi__Start_Time__c)-1))) &amp; &#39;:&#39; &amp;
TRIM(SUBSTITUTE(SUBSTITUTE(RIGHT(EventApi__Attendee_Event__r.EventApi__Start_Time__c,(LEN(EventApi__Attendee_Event__r.EventApi__Start_Time__c)-FIND(&quot;:&quot;, EventApi__Attendee_Event__r.EventApi__Start_Time__c))),&#39; AM&#39;,&#39;&#39;),&#39; PM&#39;,&#39;&#39;)) &amp; &#39;:00&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlook Event Start Date</label>
    <type>Text</type>
</CustomField>