unpackaged/main/default/objects/EventApi__Attendee__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Assignment__c</columns>
    <columns>EventApi__Contact__c</columns>
    <columns>EventApi__Account__c</columns>
    <columns>EventApi__Full_Name__c</columns>
    <columns>EventApi__Sales_Order_Line__c</columns>
    <columns>EventApi__Status__c</columns>
    <columns>EventApi__Ticket_Type__c</columns>
    <columns>EventApi__Registration_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/31/2025 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>